manifests/monitoring/prometheus/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/ignore-differences: |
      spec:
        jsonPointers:
        - /spec/template/metadata/annotations/reloader.stakater.com~1last-reloaded
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.52.0
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --web.enable-lifecycle
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention.size=4GB
        - --storage.tsdb.retention.time=3d
        ports:
        - name: http
          containerPort: 9090
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
        - name: prometheus-rules
          mountPath: /etc/prometheus/rules
        - name: prometheus-data
          mountPath: /prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
          items:
          - key: prometheus.yml
            path: prometheus.yml
      - name: prometheus-rules
        configMap:
          name: prometheus-rules
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: http
